Feat: create header with logo and hyper links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Petshop</title>
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <nav>
+            <!-- logo -->
+            <a href="index.html" class="logo">
+                <img src="/static/img/icon.ico" alt="Petshop">
+                <!-- Hiper links -->
+            <ul>
+                <li><a href="/index.html">Products</a></li>
+                <li><a href="/templates/contact.html">Contact</a></li>
+                <li><a href="/templates/sign_in.html">Sign in</a></li>
+                <li><a href="/templates/sign_up.html">Sign up</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Petshop</h1>
 </body>
 </html>
