Refactor: add product.html to anchor in line 19

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- logo -->
             <a href="index.html" class="logo">
                 <img src="/static/img/icon.ico" alt="Petshop">
-                <!-- Hiper links -->
+                <!-- Hyper links -->
             <ul>
                 <li><a href="/index.html">Products</a></li>
                 <li><a href="/templates/contact.html">Contact</a></li>
