Fix: line 19 href to /templates/product.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="/static/img/icon.ico" alt="Petshop">
                 <!-- Hyper links -->
             <ul>
-                <li><a href="/index.html">Products</a></li>
+                <li><a href="/templates/product.html">Products</a></li>
                 <li><a href="/templates/contact.html">Contact</a></li>
                 <li><a href="/templates/sign_in.html">Sign in</a></li>
                 <li><a href="/templates/sign_up.html">Sign up</a></li>
