Feat: add img carousel

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             </ul>
         </nav>
     </header>
-    <h1>Petshop</h1>
+    <section>
+        <!-- carousel -->
+        <div>
+            <img src="" alt="">
+        </div>
+    </section>
 </body>
 </html>
