Feat: add category separator with images and footer was created with iframes for social networks

--- a/index.html
+++ b/index.html
@@ -26,8 +26,57 @@
     <section>
         <!-- carousel -->
         <div>
-            <img src="" alt="">
+            <img src="static/img/carousel.png" alt="">
         </div>
+    </section>
+    <!-- separator -->
+    <h2>Las ofertas del mes</h2>
+    <section>
+        <!-- products -->
+        <div>
+            <img src="static/img/product.png" alt="">
+            <h3>Producto 1</h3>
+            <p>Descripción del producto 1</p>
+            <p>$100.00</p>
+        </div>
+        <div>
+            <img src="static/img/product.png" alt="">
+            <h3>Producto 2</h3>
+            <p>Descripción del producto 2</p>
+            <p>$200.00</p>
+        </div>
+        <div>
+            <img src="static/img/product.png" alt="">
+            <h3>Producto 3</h3>
+            <p>Descripción del producto 3</p>
+            <p>$300.00</p>
+        </div>
+        <details><summary>Ver más</summary>
+        <!-- More products -->
+        <div>
+            <img src="static/img/product.png" alt="">
+            <h3>Producto 4</h3>
+            <p>Descripción del producto 4</p>
+            <p>$400.00</p>
+        </div>
+        <div>
+            <img src="static/img/product.png" alt="">
+            <h3>Producto 5</h3>
+            <p>Descripción del producto 5</p>
+            <p>$500.00</p>
+        </div>
+        </details>
+    </section>
+    <!-- separator -->
+    <h2>Tu primera mascota</h2>
+    <!-- anchor with images -->
+    <section>
+        <a href="">
+            <img src="" alt="">
+        </a>
+        <a href="">
+            <img src="" alt="">
+        </a>
     </section>
 </body>
 </html>
