Feat: add footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/static/img/icon.ico">
+    <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
     <title>Petshop</title>
 </head>
 <body>
@@ -72,11 +73,38 @@
     <!-- anchor with images -->
     <section>
         <a href="">
-            <img src="" alt="">
+            <img src="/static/img/categoria_gato.jpeg" alt="">
         </a>
         <a href="">
-            <img src="" alt="">
+            <img src="/static/img/categoria_perros.jpg" alt="">
         </a>
     </section>
+    <!-- footer -->
+    <footer>
+        <!-- nav -->
+        <nav>
+            <ul>
+                <li><a href="/templates/product.html">Products</a></li>
+                <li><a href="/templates/contact.html">Contact</a></li>
+                <li><a href="/templates/sign_in.html">Sign in</a></li>
+                <li><a href="/templates/sign_up.html">Sign up</a></li>
+            </ul>
+        <!-- payment methods -->
+        <div>
+            <img src="/static/img/payment_methods.png" alt="">
+        </div>
+        <!-- social networks -->
+        <div>
+            <a href="">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
