--- a/index.html
+++ b/index.html
@@ -31,45 +31,64 @@
         </div>
     </section>
     <!-- separator -->
-    <h2>Las ofertas del mes</h2>
-    <section>
-        <!-- products -->
+    <h2>LAS OFERTAS DEL MES</h2>
+    <!-- products -->
+    <section class="products">
         <div>
-            <img src="static/img/product.png" alt="">
+            <img src="static/img/product1.png" alt="">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1</p>
             <p>$100.00</p>
         </div>
         <div>
-            <img src="static/img/product.png" alt="">
+            <img src="static/img/product2.png" alt="">
             <h3>Producto 2</h3>
             <p>Descripción del producto 2</p>
             <p>$200.00</p>
         </div>
         <div>
-            <img src="static/img/product.png" alt="">
+            <img src="static/img/product3.png" alt="">
             <h3>Producto 3</h3>
             <p>Descripción del producto 3</p>
             <p>$300.00</p>
         </div>
-        <details><summary>Ver más</summary>
-        <!-- More products -->
         <div>
-            <img src="static/img/product.png" alt="">
+            <img src="static/img/product4.png" alt="">
             <h3>Producto 4</h3>
             <p>Descripción del producto 4</p>
             <p>$400.00</p>
         </div>
+    </section>
+    <details><summary>Ver más</summary>
+        <!-- More products -->
+        <section class="products">
         <div>
-            <img src="static/img/product.png" alt="">
+            <img src="static/img/product4.png" alt="">
             <h3>Producto 5</h3>
+            <p>Descripción del producto 4</p>
+            <p>$400.00</p>
+        </div>
+        <div>
+            <img src="static/img/product5.png" alt="">
+            <h3>Producto 6</h3>
             <p>Descripción del producto 5</p>
             <p>$500.00</p>
         </div>
-        </details>
+        <div>
+            <img src="static/img/product6.png" alt="">
+            <h3>Producto 7</h3>
+            <p>Descripción del producto 6</p>
+            <p>$600.00</p>
+        </div>
+        <div>
+            <img src="static/img/product1.png" alt="">
+            <h3>Producto 8</h3>
+            <p>Descripción del producto </p>
+            <p>$700.00</p>
     </section>
+        </details>
     <!-- separator -->
-    <h2>Tu primera mascota</h2>
+    <h2>TU PRIMERA MASCOTA</h2>
     <!-- anchor with images -->
     <section class="category">
         <div>
@@ -86,6 +105,7 @@
         <!-- nav -->
         <nav>
             <ul>
+                <li class="header">Navegacion</li>
                 <li><a href="/templates/product.html">Products</a></li>
                 <li><a href="/templates/contact.html">Contact</a></li>
                 <li><a href="/templates/sign_in.html">Sign in</a></li>
@@ -93,7 +113,7 @@
             </ul>
         </nav>
         <!-- payment methods -->
-        <div class="payment">
+        <div>
             <img src="/static/img/pay_methop.png" alt="">
         </div>
         <!-- social networks -->
