--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <img src="/static/img/icon.ico" alt="Petshop">
                 <!-- Hyper links -->
             <ul>
-                <li><a href="/templates/product.html">Products</a></li>
-                <li><a href="/templates/contact.html">Contact</a></li>
-                <li><a href="/templates/sign_in.html">Sign in</a></li>
-                <li><a href="/templates/sign_up.html">Sign up</a></li>
+                <li><a href="/templates/product.html">Productos</a></li>
+                <li><a href="/templates/contact.html">Contacto</a></li>
+                <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
+                <li><a href="/templates/sign_up.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>
@@ -92,42 +92,44 @@
     <!-- anchor with images -->
     <section class="category">
         <div>
-            <a href="a">
-                <img src="/static/img/categoria_gato.jpeg" alt="">
-            </a>
-            <a href="a">
-                <img src="/static/img/categoria_perros.jpg" alt="">
+
+            <div class="cat-container">
+                <a href="">
+                <img src="/static/img/categoria_gato.jpeg" alt="" class="cat-image">
+                </a>
+                <a href="">
+                <img src="/static/img/categoria_perros.jpg" alt="" class="dog-image">
+                </a>
+              </div>
             </a>
         </div>
     </section>
-    <!-- footer -->
-    <footer>
-        <!-- nav -->
-        <nav>
-            <ul>
-                <li class="header">Navegacion</li>
-                <li><a href="/templates/product.html">Products</a></li>
-                <li><a href="/templates/contact.html">Contact</a></li>
-                <li><a href="/templates/sign_in.html">Sign in</a></li>
-                <li><a href="/templates/sign_up.html">Sign up</a></li>
-            </ul>
-        </nav>
-        <!-- payment methods -->
-        <div>
-            <img src="/static/img/pay_methop.png" alt="">
-        </div>
-        <!-- social networks -->
-        <div class="social">
-            <a href="">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-twitter"></i>
-            </a>
-        </div>
-    </footer>
+    <!-- Footer section -->
+  <footer>
+    <!-- Navigation section -->
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="/templates/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    
+    <!-- Payment methods -->
+    <div class="payment-methods">
+      <i class="fab fa-cc-visa"></i>
+      <i class="fab fa-cc-mastercard"></i>
+      <i class="fab fa-cc-amex"></i>
+      <i class="fab fa-cc-paypal"></i>
+    </div>
+    
+    <!-- Social media icons -->
+    <div class="social-media">
+      <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
+  </footer>
 </body>
 </html>
