--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
     <title>Petshop</title>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -16,12 +18,12 @@
             <a href="index.html" class="logo">
                 <img src="/static/img/icon.ico" alt="Petshop">
                 <!-- Hyper links -->
-            <ul>
-                <li><a href="/templates/product.html">Productos</a></li>
-                <li><a href="/templates/contact.html">Contacto</a></li>
-                <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
-                <li><a href="/templates/sign_up.html">Registrarse</a></li>
-            </ul>
+                <ul>
+                    <li><a href="/templates/product.html">Productos</a></li>
+                    <li><a href="/templates/contact.html">Contacto</a></li>
+                    <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
+                    <li><a href="/templates/sign_up.html">Registrarse</a></li>
+                </ul>
         </nav>
     </header>
     <section>
@@ -59,34 +61,35 @@
             <p>$400.00</p>
         </div>
     </section>
-    <details><summary>Ver más</summary>
+    <details>
+        <summary>Ver más</summary>
         <!-- More products -->
         <section class="products">
-        <div>
-            <img src="static/img/product4.png" alt="">
-            <h3>Producto 5</h3>
-            <p>Descripción del producto 4</p>
-            <p>$400.00</p>
-        </div>
-        <div>
-            <img src="static/img/product5.png" alt="">
-            <h3>Producto 6</h3>
-            <p>Descripción del producto 5</p>
-            <p>$500.00</p>
-        </div>
-        <div>
-            <img src="static/img/product6.png" alt="">
-            <h3>Producto 7</h3>
-            <p>Descripción del producto 6</p>
-            <p>$600.00</p>
-        </div>
-        <div>
-            <img src="static/img/product1.png" alt="">
-            <h3>Producto 8</h3>
-            <p>Descripción del producto </p>
-            <p>$700.00</p>
-    </section>
-        </details>
+            <div>
+                <img src="static/img/product4.png" alt="">
+                <h3>Producto 5</h3>
+                <p>Descripción del producto 4</p>
+                <p>$400.00</p>
+            </div>
+            <div>
+                <img src="static/img/product5.png" alt="">
+                <h3>Producto 6</h3>
+                <p>Descripción del producto 5</p>
+                <p>$500.00</p>
+            </div>
+            <div>
+                <img src="static/img/product6.png" alt="">
+                <h3>Producto 7</h3>
+                <p>Descripción del producto 6</p>
+                <p>$600.00</p>
+            </div>
+            <div>
+                <img src="static/img/product1.png" alt="">
+                <h3>Producto 8</h3>
+                <p>Descripción del producto </p>
+                <p>$700.00</p>
+        </section>
+    </details>
     <!-- separator -->
     <h2>TU PRIMERA MASCOTA</h2>
     <!-- anchor with images -->
@@ -95,41 +98,42 @@
 
             <div class="cat-container">
                 <a href="">
-                <img src="/static/img/categoria_gato.jpeg" alt="" class="cat-image">
+                    <img src="/static/img/categoria_gato.jpeg" alt="" class="cat-image">
                 </a>
                 <a href="">
-                <img src="/static/img/categoria_perros.jpg" alt="" class="dog-image">
+                    <img src="/static/img/categoria_perros.jpg" alt="" class="dog-image">
                 </a>
-              </div>
+            </div>
             </a>
         </div>
     </section>
     <!-- Footer section -->
-  <footer>
-    <!-- Navigation section -->
-    <nav>
-      <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="/templates/contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    
-    <!-- Payment methods -->
-    <div class="payment-methods">
-      <i class="fab fa-cc-visa"></i>
-      <i class="fab fa-cc-mastercard"></i>
-      <i class="fab fa-cc-amex"></i>
-      <i class="fab fa-cc-paypal"></i>
-    </div>
-    
-    <!-- Social media icons -->
-    <div class="social-media">
-      <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-    </div>
-  </footer>
+    <footer>
+        <!-- Navigation section -->
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="/templates/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+
+        <!-- Payment methods -->
+        <div class="payment-methods">
+            <i class="fab fa-cc-visa"></i>
+            <i class="fab fa-cc-mastercard"></i>
+            <i class="fab fa-cc-amex"></i>
+            <i class="fab fa-cc-paypal"></i>
+        </div>
+
+        <!-- Social media icons -->
+        <div class="social-media">
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+    </footer>
 </body>
+
 </html>
