fix error line 91 index.html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <h3>Producto 8</h3>
                 <p>Descripción del producto </p>
                 <p>$700.00</p>
+            </div>
         </section>
     </details>
     <!-- separator -->
