agregadas imagenes al carousel y cambie en stylecss

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <!-- carousel -->
         <div class="carousel">
             <img src="static/img/carousel.webp" alt="">
+            <img src="static/img/carousel_2.jpeg" alt="">
+            <img src="static/img/carousel_3.jpeg" alt="">
         </div>
     </section>
     <!-- separator -->
@@ -61,6 +63,8 @@
         </div>
     </section>
     <details>
+        <br>
+        <br>
         <summary>Ver más</summary>
         <!-- More products -->
         <section class="products">
