agrego clase de carousel a imagenes de index

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <section>
         <!-- carousel -->
         <div class="carousel">
-            <img src="static/img/carousel.webp" alt="">
-            <img src="static/img/carousel_2.jpeg" alt="">
-            <img src="static/img/carousel_3.jpeg" alt="">
+            <img src="static/img/carousel.webp" alt="" class="carousel-img">
+            <img src="static/img/carousel_2.jpeg" alt="" class="carousel-img">
+            <img src="static/img/carousel_3.jpeg" alt="" class="carousel-img">
         </div>
     </section>
     <!-- separator -->
