otra vez hago cambios en el carousel

--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
     <section>
         <!-- carousel -->
         <div class="carousel">
-            <img src="static/img/carousel.webp" alt="" class="carousel-img">
-            <img src="static/img/carousel_2.jpeg" alt="" class="carousel-img">
-            <img src="static/img/carousel_3.jpeg" alt="" class="carousel-img">
+            <ul>
+                <li>
+                  <img src="static/img/carousel.webp" alt="" class="carousel">    
+                </li>
+                <li>
+                  <img src="static/img/carousel_2.jpeg" alt="" class="carousel">
+                </li>
+                <li>
+                  <img src="static/img/carousel_3.jpeg" alt="" class="carousel">  
+                </li>
+            </ul>
         </div>
     </section>
     <!-- separator -->
