Feat: add carrousel to index

--- a/index.html
+++ b/index.html
@@ -26,22 +26,14 @@
                 </ul>
         </nav>
     </header>
-    <section>
         <!-- carousel -->
-        <div class="carousel">
-            <ul>
-                <li>
-                  <img src="static/img/carousel.webp" alt="" class="carousel">    
-                </li>
-                <li>
-                  <img src="static/img/carousel_2.jpeg" alt="" class="carousel">
-                </li>
-                <li>
-                  <img src="static/img/carousel_3.jpeg" alt="" class="carousel">  
-                </li>
-            </ul>
+        <div class="slide-box">
+          <ul>
+            <li><img src="static/img/carousel.webp" alt=""></li>
+            <li><img src="static/img/carousel_2.jpeg" alt=""></li>
+            <li><img src="static/img/carousel_3.jpeg" alt=""></li>
+          </ul>
         </div>
-    </section>
     <!-- separator -->
     <h2>LAS OFERTAS DEL MES</h2>
     <!-- products -->
