Feat: add funcional carrousel to index
I made changes to the carousel, I separated the images I made in an editor
aside to add them to the caroulse. There must be 3 in it, 2 new ones,
also animation and transition, and like carousel ul, il, img, and keyframes
change where the steps of the scroll animation are done.

---------

Co-authored-by: edlazo <edlazo@colegiosolari.edu.ar>

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
                 </ul>
         </nav>
     </header>
-    <section>
         <!-- carousel -->
-        <div class="carousel">
-            <img src="static/img/carousel.webp" alt="">
+        <div class="slide-box">
+          <ul>
+            <li><img src="static/img/carousel.webp" alt=""></li>
+            <li><img src="static/img/carousel_2.jpeg" alt=""></li>
+            <li><img src="static/img/carousel_3.jpeg" alt=""></li>
+          </ul>
         </div>
-    </section>
     <!-- separator -->
     <h2>LAS OFERTAS DEL MES</h2>
     <!-- products -->
@@ -62,6 +64,8 @@
         </div>
     </section>
     <details>
+        <br>
+        <br>
         <summary>Ver más</summary>
         <!-- More products -->
         <section class="products">
