Fix: more products structure

--- a/index.html
+++ b/index.html
@@ -91,56 +91,17 @@
           <p>$700.00</p>
         </div>
     </section>
-    <details>
-        <br>
-        <br>
-        <summary>Ver más</summary>
-        <!-- More products -->
-        <section class="products">
-            <div>
-                <img src="static/img/product4.webp" alt="">
-                <h3>Producto 5</h3>
-                <p>Descripción del producto 4</p>
-                <p>$400.00</p>
-            </div>
-            <div>
-                <img src="static/img/product5.webp" alt="">
-                <h3>Producto 6</h3>
-                <p>Descripción del producto 5</p>
-                <p>$500.00</p>
-            </div>
-            <div>
-                <img src="static/img/product6.webp" alt="">
-                <h3>Producto 7</h3>
-                <p>Descripción del producto 6</p>
-                <p>$600.00</p>
-            </div>
-            <div>
-                <img src="static/img/product1.webp" alt="">
-                <h3>Producto 8</h3>
-                <p>Descripción del producto </p>
-                <p>$700.00</p>
-            </div>
-        </section>
     </details>
     <!-- separator -->
     <h2>TU PRIMERA MASCOTA</h2>
     <!-- anchor with images -->
     <section class="category">
       <div class="cat-container">
-        <a href="">
-          <img
-            src="/static/img/categoria_gatos.webp"
-            alt=""
-            class="cat-image"
-          />
+        <a href="/templates/product.html">
+          <img src="/static/img/categoria_gatos.webp" alt="" class="cat-image"/>
         </a>
-        <a href="">
-          <img
-            src="/static/img/categoria_perros.webp"
-            alt=""
-            class="dog-image"
-          />
+        <a href="/templates/product.html">
+          <img src="/static/img/categoria_perros.webp" alt="" class="dog-image"/>
         </a>
       </div>
     </section>
@@ -166,20 +127,18 @@
 
       <!-- Social media icons -->
       <div class="social-media">
-        <a href="https://twitter.com" target="_blank"
-          ><i class="fab fa-twitter"></i
-        ></a>
-        <a href="https://instagram.com" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="https://facebook.com" target="_blank"
-          ><i class="fab fa-facebook"></i
-        ></a>
+        <a href="https://twitter.com" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://instagram.com" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://facebook.com" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
       </div>
     </footer>
-    <script
-      src="https://kit.fontawesome.com/401e7f8f46.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous">
+    </script>
   </body>
 </html>
