fix: responsive problems in css

--- a/index.html
+++ b/index.html
@@ -106,17 +106,19 @@
       </div>
     </section>
     <!-- Footer section -->
-    <footer>
-      <!-- Navigation section -->
-      <nav>
-        <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
-          <li><a href="/templates/sign_up.html">Registrarse</a></li>
-          <li><a href="/templates/contact.html">Contacto</a></li>
-        </ul>
-      </nav>
-
+<footer>
+    <!-- Navigation section -->
+    <div class="box-nav"></div>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
+        <li><a href="/templates/sign_up.html">Registrarse</a></li>
+        <li><a href="/templates/contact.html">Contacto</a></li>
+      </ul>
+    </nav>
+    </div>
+  
       <!-- Payment methods -->
       <div class="payment-methods">
         <i class="fab fa-cc-visa"></i>
@@ -124,20 +126,14 @@
         <i class="fab fa-cc-amex"></i>
         <i class="fab fa-cc-paypal"></i>
       </div>
-
       <!-- Social media icons -->
       <div class="social-media">
-        <a href="https://twitter.com" target="_blank">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://instagram.com" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://facebook.com" target="_blank">
-          <i class="fab fa-facebook"></i>
-        </a>
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
       </div>
-    </footer>
+    
+  </footer>
     <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous">
     </script>
   </body>
