feat: new image .webp and add to html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="slide-box">
           <ul>
             <li><img src="static/img/carousel.webp" alt=""></li>
-            <li><img src="static/img/carousel_2.jpeg" alt=""></li>
-            <li><img src="static/img/carousel_3.jpeg" alt=""></li>
+            <li><img src="static/img/carousel_2.webp" alt=""></li>
+            <li><img src="static/img/carousel_3.webp" alt=""></li>
           </ul>
         </div>
     <!-- separator -->
