--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <a href="index.html" class="logo">
                 <img src="/static/img/icon.ico" alt="Petshop">
             </a>
-                <!-- Hyper links -->
-                <ul>
-                    <li><a href="/templates/product.html">Productos</a></li>
-                    <li><a href="/templates/contact.html">Contacto</a></li>
-                    <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
-                    <li><a href="/templates/sign_up.html">Registrarse</a></li>
-                </ul>
+            <!-- Hyper links -->
+            <ul>
+                <li><a href="/templates/product.html">Productos</a></li>
+                <li><a href="/templates/contact.html">Contacto</a></li>
+                <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
+                <li><a href="/templates/sign_up.html">Registrarse</a></li>
+            </ul>
         </nav>
     </header>
     <section>
@@ -31,43 +31,44 @@
         <div class="carousel">
             <ul>
                 <li>
-                  <img src="static/img/carousel.webp" alt="" class="carousel">    
+                    <img src="static/img/carousel.webp" alt="" class="carousel">
                 </li>
                 <li>
-                  <img src="static/img/carousel_2.jpeg" alt="" class="carousel">
+                    <img src="static/img/carousel_2.jpeg" alt="" class="carousel">
                 </li>
                 <li>
-                  <img src="static/img/carousel_3.jpeg" alt="" class="carousel">  
+                    <img src="static/img/carousel_3.jpeg" alt="" class="carousel">
                 </li>
             </ul>
         </div>
     </section>
-    <!-- separator -->
+
+    <!-- separador -->
     <h2>LAS OFERTAS DEL MES</h2>
-    <!-- products -->
+    <!-- productos -->
     <section class="products">
         <div>
             <img src="static/img/product1.webp" alt="">
-            <h3>Producto 1</h3>
-            <p>Descripción del producto 1</p>
+            <h3>Purina Cat Chow</h3>
+            <p>Para gatos adultos 18kg</p>
             <p>$100.00</p>
         </div>
         <div>
             <img src="static/img/product2.webp" alt="">
-            <h3>Producto 2</h3>
-            <p>Descripción del producto 2</p>
+            <h3>Purina Dog Chow</h3>
+            <p>Para perros adultos medianos y grandes 24kg</p>
             <p>$200.00</p>
         </div>
         <div>
             <img src="static/img/product3.webp" alt="">
-            <h3>Producto 3</h3>
-            <p>Descripción del producto 3</p>
+            <h3>Purina Excellent</h3>
+            <p>Para perros adultos 22kg</p>
             <p>$300.00</p>
         </div>
         <div>
             <img src="static/img/product4.webp" alt="">
-            <h3>Producto 4</h3>
-            <p>Descripción del producto 4</p>
+            <h3>Royal Cann</h3>
+            <p>Para perros adultos 18kg</p>
             <p>$400.00</p>
         </div>
     </section>
@@ -85,14 +86,14 @@
             </div>
             <div>
                 <img src="static/img/product5.webp" alt="">
-                <h3>Producto 6</h3>
-                <p>Descripción del producto 5</p>
+                <h3>Eukanuba</h3>
+                <p>Para perros adultos razas grandes 18kg</p>
                 <p>$500.00</p>
             </div>
             <div>
                 <img src="static/img/product6.webp" alt="">
-                <h3>Producto 7</h3>
-                <p>Descripción del producto 6</p>
+                <h3>Old Prince Equilibrum</h3>
+                <p>Para perros razas grandes y medianas 23kg</p>
                 <p>$600.00</p>
             </div>
             <div>
@@ -107,14 +108,14 @@
     <h2>TU PRIMERA MASCOTA</h2>
     <!-- anchor with images -->
     <section class="category">
-            <div class="cat-container">
-                <a href="">
-                    <img src="/static/img/categoria_gatos.webp" alt="" class="cat-image">
-                </a>
-                <a href="">
-                    <img src="/static/img/categoria_perros.webp" alt="" class="dog-image">
-                </a>
-            </div>
+        <div class="cat-container">
+            <a href="">
+                <img src="/static/img/categoria_gatos.webp" alt="" class="cat-image">
+            </a>
+            <a href="">
+                <img src="/static/img/categoria_perros.webp" alt="" class="dog-image">
+            </a>
+        </div>
     </section>
     <!-- Footer section -->
     <footer>
@@ -145,4 +146,5 @@
     </footer>
     <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
