texto en español, mas descripciones de productos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><img src="static/img/carousel_3.jpeg" alt=""></li>
           </ul>
         </div>
-    <!-- separator -->
+    <!-- separador -->
     <h2>LAS OFERTAS DEL MES</h2>
     <!-- productos -->
     <section class="products">
@@ -67,12 +67,12 @@
         <br>
         <br>
         <summary>Ver más</summary>
-        <!-- More products -->
+        <!-- Mas productos -->
         <section class="products">
             <div>
-                <img src="static/img/product4.webp" alt="">
-                <h3>Producto 5</h3>
-                <p>Descripción del producto 4</p>
+                <img src="static/img/royal-can-adu.jpeg" alt="">
+                <h3>Royal Cann</h3>
+                <p>Para gatos adultos medianos 18kg</p>
                 <p>$400.00</p>
             </div>
             <div>
@@ -88,16 +88,16 @@
                 <p>$600.00</p>
             </div>
             <div>
-                <img src="static/img/product1.webp" alt="">
-                <h3>Producto 8</h3>
-                <p>Descripción del producto </p>
+                <img src="static/img/royal-cann-ga.jpeg" alt="">
+                <h3>Royal Cann Savour Exigent </h3>
+                <p>Para gatos adultos 28kg</p>
                 <p>$700.00</p>
             </div>
         </section>
     </details>
-    <!-- separator -->
+    <!-- separador -->
     <h2>TU PRIMERA MASCOTA</h2>
-    <!-- anchor with images -->
+    <!--  imagenes -->
     <section class="category">
         <div class="cat-container">
             <a href="">
@@ -120,7 +120,7 @@
             </ul>
         </nav>
 
-        <!-- Payment methods -->
+        <!-- metodos de pago -->
         <div class="payment-methods">
             <i class="fab fa-cc-visa"></i>
             <i class="fab fa-cc-mastercard"></i>
@@ -128,7 +128,7 @@
             <i class="fab fa-cc-paypal"></i>
         </div>
 
-        <!-- Social media icons -->
+        <!-- iconos de redes sociales -->
         <div class="social-media">
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
