imagenes nuevas, se saco texto en ingles y se puso español

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- encabezado -->
     <header>
         <nav>
             <!-- logo -->
             <a href="index.html" class="logo">
                 <img src="/static/img/icon.ico" alt="Petshop">
             </a>
-            <!-- Hyper links -->
+            <!-- Hiper links -->
             <ul>
                 <li><a href="/templates/product.html">Productos</a></li>
                 <li><a href="/templates/contact.html">Contacto</a></li>
@@ -70,7 +70,7 @@
         <!-- Mas productos -->
         <section class="products">
             <div>
-                <img src="static/img/royal-can-adu.jpeg" alt="">
+                <img src="static/img/producto7.jpeg" alt="">
                 <h3>Royal Cann</h3>
                 <p>Para gatos adultos medianos 18kg</p>
                 <p>$400.00</p>
@@ -88,7 +88,7 @@
                 <p>$600.00</p>
             </div>
             <div>
-                <img src="static/img/royal-cann-ga.jpeg" alt="">
+                <img src="static/img/producto8.jpeg" alt="">
                 <h3>Royal Cann Savour Exigent </h3>
                 <p>Para gatos adultos 28kg</p>
                 <p>$700.00</p>
@@ -108,9 +108,9 @@
             </a>
         </div>
     </section>
-    <!-- Footer section -->
+    <!-- pie de pagina -->
     <footer>
-        <!-- Navigation section -->
+        <!-- seccion de navegacion -->
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
